fixes: delete draft handler implemented, update beat function bug fixed, getTagsByName implemented
